--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.0+3
+  dio: ^5.7.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/ShopApp.png
     - assets/OnBoardImage/
 
   # An image asset can refer to one or more resolution-specific "variants", see
