--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   dio: ^5.7.0
   shared_preferences: ^2.3.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/adv/
     - assets/ShopApp.png
     - assets/OnBoardImage/
 
