--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   dio: ^5.7.0
   shared_preferences: ^2.3.3
   carousel_slider: ^5.0.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  flutter_snake_navigationbar: ^0.6.1
 
 dev_dependencies:
   flutter_test:
