--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,9 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+    buildFeatures {
+        buildConfig = true
+    }
 }
 
 flutter {
